--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,3 +42,33 @@ jobs:
         maven-repo-server-username: adam-ht
         maven-repo-server-password: ${{ secrets.ACCESS_TOKEN }}
         maven-release-args: "-Dskip.unit.tests=true -Dskip.integration.tests=true"
+
+    - name: Maven release (fork)
+      # You may pin to the exact commit or the version.
+      # uses: MiniDigger/github-actions-maven-release@191b715b12d345b172e3b85dc865ff12d44695e6
+      uses: MiniDigger/github-actions-maven-release@v1.10.2
+      with:
+        # Filter the branch to execute the release on
+        release-branch-name: main
+        # Enable gpg signing
+        #gpg-enabled: # optional
+        # The GPG key ID
+        #gpg-key-id: # optional
+        # The GPG key
+        #gpg-key: # optional
+        # The maven local repository path
+        #maven-local-repo-path: # optional, default is $M2_HOME/repository
+        # Maven server repository id to push the artefacts to
+        maven-repo-server-id: github
+        # Maven server repository username
+        maven-repo-server-username: adam-ht
+        # Maven server repository password
+        #maven-repo-server-password: 
+        # The maven arguments for the release
+        #maven-args: # optional, default is 
+        # The git user name for commiting the release
+        git-release-bot-name: adam-ht
+        # The git user email for commiting the release
+        git-release-bot-email: todomek1234@gmail.com
+        # Github access token. https://help.github.com/en/github/authenticating-to-github/creating-a-personal-access-token-for-the-command-line
+        access-token: ${{ secrets.ACCESS_TOKEN }}
