--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,46 +29,26 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - name: Release
-      uses: qcastel/github-actions-maven-release@master
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v4.1.0
       with:
-        release-branch-name: "main"
-
-        git-release-bot-name: "adam-ht"
-        git-release-bot-email: "todomek1234@gmail.com"
-
-        access-token: ${{ secrets.ACCESS_TOKEN }}
-        maven-repo-server-id: ${MAVEN_SERVER_ID}
-        maven-repo-server-username: adam-ht
-        maven-repo-server-password: ${{ secrets.ACCESS_TOKEN }}
-        maven-release-args: "-Dskip.unit.tests=true -Dskip.integration.tests=true"
-
-    - name: Maven release (fork)
-      # You may pin to the exact commit or the version.
-      # uses: MiniDigger/github-actions-maven-release@191b715b12d345b172e3b85dc865ff12d44695e6
-      uses: MiniDigger/github-actions-maven-release@v1.10.2
-      with:
-        # Filter the branch to execute the release on
-        release-branch-name: main
-        # Enable gpg signing
-        #gpg-enabled: # optional
-        # The GPG key ID
-        #gpg-key-id: # optional
-        # The GPG key
-        #gpg-key: # optional
-        # The maven local repository path
-        #maven-local-repo-path: # optional, default is $M2_HOME/repository
-        # Maven server repository id to push the artefacts to
-        maven-repo-server-id: github
-        # Maven server repository username
-        maven-repo-server-username: adam-ht
-        # Maven server repository password
-        #maven-repo-server-password: 
-        # The maven arguments for the release
-        #maven-args: # optional, default is 
-        # The git user name for commiting the release
-        git-release-bot-name: adam-ht
-        # The git user email for commiting the release
-        git-release-bot-email: todomek1234@gmail.com
-        # Github access token. https://help.github.com/en/github/authenticating-to-github/creating-a-personal-access-token-for-the-command-line
-        access-token: ${{ secrets.ACCESS_TOKEN }}
+        # Artifact name
+        #name: # optional, default is artifact
+        # A file, directory or wildcard pattern that describes what to upload
+        path: /home/runner/work/tcp/tcp/target/tcp-2.0.jar
+        # The desired behavior if no files are found using the provided path.
+    Available Options:
+      warn: Output a warning but do not fail the action
+      error: Fail the action with an error message
+      ignore: Do not output any warnings or errors, the action does not fail
+    
+        #if-no-files-found: # optional, default is warn
+        # Duration after which artifact will expire in days. 0 means using default retention.
+    #Minimum 1 day. Maximum 90 days unless changed from the repository settings page.
+    
+        #retention-days: # optional
+        # The level of compression for Zlib to be applied to the artifact archive. The value can range from 0 to 9: - 0: No compression - 1: Best speed - 6: Default compression (same as GNU Gzip) - 9: Best compression Higher levels will result in better compression, but will take longer to complete. For large files that are not easily compressed, a value of 0 is recommended for significantly faster uploads.
+    
+        #compression-level: # optional, default is 6
+              
+        /home/runner/work/tcp/tcp/target/tcp-2.0.jar
