--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,11 +37,11 @@ jobs:
         # A file, directory or wildcard pattern that describes what to upload
         path: /home/runner/work/tcp/tcp/target/tcp-2.0.jar
         # The desired behavior if no files are found using the provided path.
-    Available Options:
-      warn: Output a warning but do not fail the action
-      error: Fail the action with an error message
-      ignore: Do not output any warnings or errors, the action does not fail
-    
+      #Available Options:
+        #warn: Output a warning but do not fail the action
+        #error: Fail the action with an error message
+        #ignore: Do not output any warnings or errors, the action does not fail
+      
         #if-no-files-found: # optional, default is warn
         # Duration after which artifact will expire in days. 0 means using default retention.
     #Minimum 1 day. Maximum 90 days unless changed from the repository settings page.
@@ -51,4 +51,4 @@ jobs:
     
         #compression-level: # optional, default is 6
               
-        /home/runner/work/tcp/tcp/target/tcp-2.0.jar
+        #/home/runner/work/tcp/tcp/target/tcp-2.0.jar
