--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,11 +33,14 @@ jobs:
       uses: actions/upload-artifact@v4.1.0
       with:
         path: /home/runner/work/tcp/tcp/target/tcp-2.0.jar
-
-    - name: Upload release artifacts
-      uses: Roang-zero1/github-upload-release-artifacts-action@v2
-      with:
-        args: "dist/bin/ dist/shell/compiled.sh"
-      env:
-        GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
        
+    - name: Upload Release Asset
+      id: upload-release-asset 
+      uses: actions/upload-release-asset@v1
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+          upload_url: https://github.com/adam-ht/tcp/releases/tag/V2.0 #ulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ./artifact.zip
+          asset_name: artifact.zip
+          asset_content_type: application/zip
