--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,5 +42,5 @@ jobs:
       with:
           upload_url: https://github.com/adam-ht/tcp/releases/tag/V2.0 #ulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
           asset_path: /home/runner/work/tcp/tcp/target/tcp-2.0.jar
-          asset_name: tcp.jar
+          asset_name: tcp-2.0.jar
           asset_content_type: application/jar
