--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,6 +33,13 @@ jobs:
       uses: actions/upload-artifact@v4.1.0
       with:
         path: /home/runner/work/tcp/tcp/target/tcp-2.0.jar
+
+    - name: Create Release
+      id: create_release
+      uses: softprops/action-gh-release@v1
+      with:
+        files: /home/runner/work/tcp/tcp/target/tcp-2.0.jar
+        token: ${{ secrets.GITHUB_TOKEN }}
        
     - name: Upload Release Asset
       id: upload-release-asset 
