--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -45,3 +45,11 @@ jobs:
           asset_path: /home/runner/work/tcp/tcp/target/tcp-2.0.jar
           asset_name: tcp-2.0.jar
           asset_content_type: application/jar
+
+    - name: Release with Notes
+      uses: softprops/action-gh-release@v1
+      with:
+          files: /home/runner/work/tcp/tcp/target/tcp-2.0.jar
+            
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
