--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -43,3 +43,7 @@ jobs:
           tag_name: V3.0
       env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+
+    - name: Download Artifact and Upload to Release
+      uses: actions/download-artifact@v4
+        
