--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,4 +42,5 @@ jobs:
     - name: Upload Release Asset
       id: upload-release-asset 
       uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
       
