--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,4 +39,6 @@ jobs:
     - name: Upload Release Asset
       id: upload-release-asset 
       uses: softprops/action-gh-release@v1
+      with:
+        tag_name: V3.0
       
