--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,4 +41,5 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
         tag_name: V2.0
+        token: ${{ secrets.GITHUB_TOKEN }}
       
