--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,5 +40,5 @@ jobs:
       with:
         tag_name: V2.0
         token: ${{ secrets.GITHUB_TOKEN }}
-        files: /home/runner/work/tcp/tcp/target/tcp-2.0.jar
-      
+        #files: /home/runner/work/tcp/tcp/target/tcp-2.0.jar
+        files: ${project.build.directory}/${project.artifactId}-${project.version}.jar
